# calendar-condenser

./: .env.example  Makefile  Makefile.backup  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
docs/: model-versions.md  setup.md
docs/blog/: 2024-09-11-agents-and-openapi.md  2024-09-11-testing-agents.md  2025-08-14-state-transitions.md  2025-09-03-stream-mode.md
scratchpad/: test_structured_output.py  test_structured_output_v2.py
src/: main.py
src/agents/: calendar.py  guide.py  messaging.py  rescheduling.py  summary.py
src/agents/helpers/: models.py  serialization.py
src/api/: client.py  main.py  main_v2.py  serializers.py
src/api/routes/: graphs.py  users.py
src/callbacks/: __init__.py  add_source_to_messages.py
src/client/: main.py
src/config/: main.py  types.py
src/domains/calendar/: mock_calendar.py  mock_events.py
src/domains/google_calendar/types/: google_calendar.py  google_calendar_event.py
src/domains/messaging/: mock_messaging_platform.py
src/domains/mock_calendar/: mock_calendar.py  mock_events.py
src/domains/mock_messaging/: mock_messaging_platform.py
src/domains/mock_user/: mock_user_provider.py
src/domains/user/: mock_user_provider.py
src/graph/: main.py  mock_data.py  send_rescheduling_proposal_to_invitee.py  state.py
src/graph/nodes/after_rescheduling_proposals/: main.py
src/graph/nodes/before_rescheduling_proposals/: main.py
src/graph/nodes/conclusion/: main.py
src/graph/nodes/confirm_rescheduling_proposals/: main.py
src/graph/nodes/confirm_start/: main.py
src/graph/nodes/final_summarization/: main.py
src/graph/nodes/get_rescheduling_proposals/: main.py  types.py
src/graph/nodes/introduction/: main.py
src/graph/nodes/load_calendar/: main.py  types.py
src/graph/nodes/load_invitees/: main.py  types.py
src/graph/nodes/load_user/: main.py  types.py
src/graph/nodes/send_rescheduling_proposal_to_invitee_subgraph/: main.py  types.py
src/graph/nodes/send_rescheduling_proposal_to_invitee_subgraph/analyze_message/: main.py  types.py
src/graph/nodes/send_rescheduling_proposal_to_invitee_subgraph/receive_message/: main.py  types.py
src/graph/nodes/send_rescheduling_proposal_to_invitee_subgraph/send_message/: main.py  types.py
src/graph/nodes/summarize_calendar/: main.py
src/graph/nodes/update_calendar/: main.py
src/scratchpad/: README.md  dict_state.py  ollama_structured_output.py  ollama_structured_output_and_reasoning.py  ollama_structured_output_langchain.py  openai_reasoning.py  openai_reasoning_langgraph.py  openai_structured_output_and_reasoning.py  source_messages_test.py  stream_mode_code_example.py  subgraph_checkpointing.py  subgraph_streaming.py  subgraph_streaming_v2.py
src/types/: calendar.py  calendar_event.py  higher_order.py  loading.py  messaging.py  messaging_platform.py  nodes.py  rescheduled_event.py  rest_api.py  state.py  user.py  user_provider.py
src/utilities/: loading.py  merge_dicts.py  sentiment.py  timestamp_formatting.py
test/: conftest.py
test/fixtures/: mock_events.py  mock_state.py
test/integration/agents/: test_messaging.py  test_rescheduling.py
test/unit/api/: test_serializers.py
test/unit/callbacks/: test_add_source_to_messages.py
test/unit/domains/calendar/: test_mock_calendar.py
test/unit/domains/messaging/: test_mock_messaging_platform.py
test/unit/domains/user/: test_mock_user_provider.py
test/unit/graph/: test_state.py
test/unit/utilities/: test_merge_dicts.py  test_timestamp_formatting.py
