[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.1",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.7",
]

[tool.basedpyright]
include = ["src/", "test/"]
exclude = ["**/__pycache__", "typings"]
typeCheckingMode = "strict"

# Allow implicit string concatenation for building prompts
reportImplicitStringConcatenation = false
# Allow multiple classes to be inherited even if it's unsafe (seems to be working fine)
reportUnsafeMultipleInheritance = false
# Allow for incompletely typed external packages
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.ruff]
exclude = ["typings"]
line-length = 130
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "TD", "FIX", # all TODO comment requirements
    "D100", # Missing docstring in public module
    "D101", #Missing docstring in public class
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D203", # Incorrect blank line before class
    "D213", # Multiline-summary second line
    "S101", # Use of `assert` detected
    "T201", # `print` found
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.flake8-builtins]
allowed-modules = ["types"]
ignorelist = ["id", "input"]
