[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.basedpyright]
include = ["src/", "test/"]
exclude = ["**/__pycache__", "typings"]
typeCheckingMode = "strict"

# Allow implicit string concatenation for building prompts
reportImplicitStringConcatenation = false
# Allow multiple classes to be inherited even if it's unsafe (seems to be working fine)
reportUnsafeMultipleInheritance = false
# Allow for incompletely typed external packages
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.ruff]
exclude = ["typings"]
line-length = 130
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "D100", # Missing docstring in public module
    "D101", #Missing docstring in public class
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D203", # Incorrect blank line before class
    "D213", # Multiline-summary second line
    "ERA001", # Found commented-out code
    "FLY002", # Consider f-string instead of string join
    "PGH003", # Use specific rule codes when ignoring type issues
    "S101", # Use of `assert` detected
    "S106", # Possible hardcoded password assigned to argument: "token"
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SIM108", # Use ternary operator
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "T201", # `print` found
    "TD", "FIX", # all TODO comment requirements
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    "ANN201", # Missing return type annotation for public function
    "DTZ", # Timezone related
    "PLR2004", # Magic value used in comparison, consider replacing `123` with a constant variable
]

[tool.ruff.lint.flake8-builtins]
allowed-modules = ["types"]
ignorelist = ["id", "input"]
